@@ -1,5 +1,6 @@
 [0.2.8.0 - Beta    xx/July/2008]
 + added support for ACM codec configuration (via IAMStreamConfig interface)
++ added support for stream selection via IAMStreamSelect interface
 
 [0.2.7.0 - Beta	   24/July/2008]
 + added support for Enhanced Video Renderer
